--- a/src/vista/vistaProductos.fxml
+++ b/src/vista/vistaProductos.fxml
@@ -2,7 +2,9 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -63,7 +65,7 @@
             <TextField fx:id="txtModelo" layoutX="399.0" layoutY="35.0" opacity="0.88" prefHeight="25.0" prefWidth="171.0" />
             <TextField fx:id="txtPrecioCompra" layoutX="604.0" layoutY="35.0" opacity="0.88" prefHeight="25.0" prefWidth="171.0" />
             <TextField fx:id="txtPrecioVenta" layoutX="604.0" layoutY="95.0" opacity="0.88" prefHeight="25.0" prefWidth="171.0" />
-            <Button id="anchorPane" fx:id="btnAgregar" layoutX="215.0" layoutY="132.0" mnemonicParsing="false" onAction="#setAddAgregar" prefHeight="31.0" prefWidth="113.0" style="-fx-background-color: #2848BA;" text="AGREGAR" textFill="WHITE">
+            <Button id="anchorPane" fx:id="btnAgregar" layoutX="272.0" layoutY="132.0" mnemonicParsing="false" onAction="#setAddAgregar" prefHeight="31.0" prefWidth="113.0" style="-fx-background-color: #2848BA;" text="AGREGAR" textFill="WHITE">
                <font>
                   <Font size="14.0" />
                </font>
@@ -75,7 +77,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button fx:id="btnLimpiar" layoutX="346.0" layoutY="132.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="113.0" style="-fx-background-color: #2848BA;" text="LIMPIAR" textFill="WHITE">
+            <Button fx:id="btnLimpiar" layoutX="402.0" layoutY="132.0" mnemonicParsing="false" onAction="#limpiartxt" prefHeight="33.0" prefWidth="113.0" style="-fx-background-color: #2848BA;" text="LIMPIAR" textFill="WHITE">
                <font>
                   <Font size="14.0" />
                </font>
@@ -87,33 +89,26 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button fx:id="btnEliminar" layoutX="477.0" layoutY="132.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="113.0" style="-fx-background-color: #2848BA;" text="ELIMINAR" textFill="WHITE">
-               <font>
-                  <Font size="14.0" />
-               </font>
-               <graphic>
-                  <ImageView fitHeight="21.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../imagenes/eliminar%20(1).png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
             <ComboBox fx:id="txtProveedor" layoutX="399.0" layoutY="95.0" prefHeight="25.0" prefWidth="171.0" />
          </children>
       </Pane>
-      <TableView fx:id="tblProductos" layoutX="22.0" layoutY="175.0" prefHeight="301.0" prefWidth="794.0">
+      <TableView fx:id="tblProductos" layoutX="22.0" layoutY="175.0" onMouseClicked="#seleccionar" prefHeight="301.0" prefWidth="794.0">
         <columns>
-          <TableColumn fx:id="colID" prefWidth="58.0" text="ID" />
           <TableColumn fx:id="colCodigo" prefWidth="82.0" text="CÓDIGO" />
             <TableColumn fx:id="colMarca" prefWidth="103.0" text="MARCA" />
             <TableColumn fx:id="colModelo" prefWidth="120.0" text="MODELO" />
             <TableColumn fx:id="colRam" prefWidth="100.0" text="RAM" />
-            <TableColumn fx:id="colAlmacenamiento" prefWidth="130.0" text="ALMACENAMIENTO" />
-            <TableColumn fx:id="colCantidad" text="CANTIDAD" />
-            <TableColumn fx:id="colPrecioVenta" prefWidth="120.0" text="PRECIO VENTA" />
-            <TableColumn prefWidth="75.0" text="Column X" />
+            <TableColumn fx:id="colAlmacenamiento" prefWidth="139.0" text="ALMACENAMIENTO" />
+            <TableColumn fx:id="colCantidad" prefWidth="117.0" text="CANTIDAD" />
+            <TableColumn fx:id="colPrecioVenta" prefWidth="132.0" text="PRECIO VENTA" />
         </columns>
+         <contextMenu>
+            <ContextMenu>
+              <items>
+                <MenuItem fx:id="contextMenu" mnemonicParsing="false" onAction="#eliminarProducto" text="ELIMINAR PRODUCTO" />
+              </items>
+            </ContextMenu>
+         </contextMenu>
       </TableView>
    </children>
 </AnchorPane>
