--- a/src/vista/vistaVender.fxml
+++ b/src/vista/vistaVender.fxml
@@ -124,5 +124,10 @@
       <TextField fx:id="txtPago" layoutX="396.0" layoutY="413.0" opacity="0.88" prefHeight="25.0" prefWidth="151.0" />
       <TextField fx:id="txtCambio" layoutX="396.0" layoutY="453.0" opacity="0.88" prefHeight="25.0" prefWidth="151.0" />
       <TextField fx:id="txtTotal" layoutX="607.0" layoutY="413.0" opacity="0.88" prefHeight="25.0" prefWidth="151.0" />
+      <Button fx:id="btnComprar" layoutX="607.0" layoutY="447.0" mnemonicParsing="false" onAction="#generarCompra" prefHeight="33.0" prefWidth="151.0" style="-fx-background-color: #2848BA;" text="VENDER" textFill="WHITE">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
